--- a/index.html
+++ b/index.html
@@ -66,15 +66,6 @@
       font-size: small;
     }
 
-    #progress {
-      position: absolute;
-      top: 0;
-      height: 5px;
-      background: blue;
-      z-index: 99;
-      transition: width 0.1s ease-in-out;
-    }
-
     #quality {
       position: absolute;
       bottom: 10px;
@@ -141,11 +132,6 @@
       display: none;
     }
 
-    body.nohf #progress,
-    body.nohf .cube-face {
-      background: #ff9d0d;
-    }
-
     #enter {
       position: absolute;
       top: 0;
@@ -162,7 +148,6 @@
   <div id="info">
     <p></p>
   </div>
-  <div id="progress"></div>
 
   <div id="message">init...</div>
 
@@ -184,6 +169,7 @@
     <span id="camid"></span>
   </div>
 
+  <!-- <script type="module" src="staticgs.js"></script> -->
   <script type="module" src="hybrid.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/pyodide/v0.26.4/full/pyodide.js"></script> -->
