add: lossless frame extraction

--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
       display: none;
     }
 
+    canvas,
+    video {
+      image-rendering: pixelated;
+      image-rendering: crisp-edges;
+      /* For modern browsers */
+    }
+
     #enter {
       position: absolute;
       top: 0;
