--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     body {
       overflow: hidden;
@@ -81,6 +82,38 @@
       display: flex;
       flex-direction: column;
       gap: 4px;
+    }
+
+    #control {
+      position: absolute;
+      bottom: 10px;
+      z-index: 999;
+      left: 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+    }
+
+    #playPauseButton {
+      width: 42px;
+      height: 42px;
+      border-radius: 50px;
+      background-color: #449aad;
+      border: none;
+      color: white;
+      text-align: center;
+      font-size: 20px;
+      cursor: pointer;
+      outline: none;
+      display: none;
+      margin-right: 10px;
+    }
+
+    #ts {
+      border: none;
+      font-size: 20px;
     }
 
     #caminfo {
@@ -184,6 +217,13 @@
   </div>
   <div id="caminfo">
     <span id="camid"></span>
+  </div>
+
+  <div id="control">
+    <button id="playPauseButton" class="play">
+      <i class="fas fa-pause"></i>
+    </button>
+    <span id="ts"></span>
   </div>
 
   <div id="progress">
