add: style problem

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
       outline: none;
       display: none;
       margin-right: 10px;
+      justify-content: center;
+      align-items: center;
     }
 
     #ts {
