add: error hint

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       width: 100%;
       align-items: center;
       justify-content: center;
+      white-space: pre-line;
     }
 
     #message {
