--- a/index.html
+++ b/index.html
@@ -95,9 +95,15 @@
       gap: 4px;
     }
 
-    #note {
+    #note1 {
       font-weight: bold;
-      font-size: large;
+      font-size: 20px;
+      color: #c3313d;
+    }
+
+    #note2 {
+      font-weight: bold;
+      font-size: 24px;
       color: #c3313d;
     }
 
@@ -197,7 +203,8 @@
   </div>
 
   <div id="cornerNote">
-    <span id="note">ONLY A DEMO!</span>
+    <span id="note1">ONLY A DEMO</span>
+    <span id="note2">with DEGRADATION!</span>
   </div>
 
   <script type="module" src="hybrid.js"></script>
