--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     }
 
     #speed {
+      font-size: xx-large;
       position: absolute;
       bottom: 60px;
       z-index: 999;
@@ -200,7 +201,7 @@
       top: 0;
       left: 0;
       height: 100%;
-      background-color: #c3c3c3;
+      background-color: #787878;
       width: 0%;
       border-radius: 5px;
     }
