--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Web DEMO</title>
+  <title>Web Player</title>
   <meta charset="utf-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
@@ -77,7 +77,7 @@
 
     #progress {
       position: absolute;
-      top: 10px;
+      bottom: 60px;
       z-index: 999;
       left: 10px;
       display: flex;
@@ -270,18 +270,18 @@
   </div>
   <span id="speed"></span>
 
-  <!-- <div id="progress">
+  <div id="progress">
     <span id="cbProgress"></span>
     <span id="highProgress"></span>
     <span id="lowProgress"></span>
     <span id="rotProgress"></span>
     <span id="plyProgress"></span>
-    <span id="speed"></span>
-  </div> -->
+    <!-- <span id="speed"></span> -->
+  </div>
 
   <div id="cornerNote">
-    <span id="note1">ONLY A DEMO</span>
-    <span id="note2">with DEGRADATION!</span>
+    <span id="note1">VOLUMETRIC VIDEO WEB PLAYER</span>
+    <!-- <span id="note2">with DEGRADATION!</span> -->
   </div>
 
   <script type="module" src="hybrid.js"></script>
