--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
   <div id="cornerNote">
     <span id="note1">VOLUMETRIC VIDEO WEB PLAYER</span>
-    <!-- <span id="note2">with DEGRADATION!</span> -->
+    <span id="note2">sort by CPU!</span>
   </div>
 
   <script type="module" src="hybrid.js"></script>
